YAML-STANDARD/exam1_ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: fastapi-ingress
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  rules:
  - host: mystreamingapp.crs-datascientest.cloudns.biz 
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: fastapi-service
            port:
              number: 80
  tls:
  - hosts:
    - mystreamingapp.crs-datascientest.cloudns.biz
    secretName: fastapi-tls
